updated test class

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d3bc82">  <td>23/05/15 16:07:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.screenshotCapture(org.testng.ITestResult)[pri:0, instance:com.crm.qa.testcases.LoginPageTest@661972b0]">&lt;&lt;screenshotCapture</td> 
+<tr bgcolor="f56bcc">  <td>24/02/09 17:37:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@6b81ce95]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/05/15 16:07:32</td>   <td>234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@661972b0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/05/15 16:06:57</td>   <td>-34536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@661972b0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/05/15 16:06:57</td>   <td>-34830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.crmLogoImageTest()[pri:2, instance:com.crm.qa.testcases.LoginPageTest@661972b0]">crmLogoImageTest</td> 
+<tr bgcolor="f56bcc">  <td>24/02/09 17:37:18</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.screenshotCapture(org.testng.ITestResult)[pri:0, instance:com.crm.qa.testcases.LoginPageTest@6b81ce95]">&lt;&lt;screenshotCapture</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>24/02/09 17:37:18</td>   <td>-40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.testcases.LoginPageTest@6b81ce95]">loginPageTitleTest</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/05/15 16:07:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.screenshotCapture(org.testng.ITestResult)[pri:0, instance:com.crm.qa.testcases.LoginPageTest@661972b0]">&lt;&lt;screenshotCapture</td> 
-<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/05/15 16:06:57</td>   <td>-34536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@661972b0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/05/15 16:07:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.screenshotCapture(org.testng.ITestResult)[pri:0, instance:com.crm.qa.testcases.LoginPageTest@661972b0]">&lt;&lt;screenshotCapture</td> 
-<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/05/15 16:07:32</td>   <td>234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@661972b0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/05/15 16:07:03</td>   <td>-28878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginButtonTest()[pri:3, instance:com.crm.qa.testcases.LoginPageTest@661972b0]">clickOnLoginButtonTest</td> 
+<tr bgcolor="f56bcc">  <td>24/02/09 17:37:18</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@6b81ce95]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>24/02/09 17:37:18</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@6b81ce95]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>24/02/09 17:37:18</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@6b81ce95]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>24/02/09 17:37:18</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.clickOnLoginButtonTest()[pri:3, instance:com.crm.qa.testcases.LoginPageTest@6b81ce95]">clickOnLoginButtonTest</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/05/15 16:06:50</td>   <td>-41056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.testcases.LoginPageTest@661972b0]">loginPageTitleTest</td> 
+<tr bgcolor="f56bcc">  <td>24/02/09 17:37:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@6b81ce95]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>24/02/09 17:37:18</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.screenshotCapture(org.testng.ITestResult)[pri:0, instance:com.crm.qa.testcases.LoginPageTest@6b81ce95]">&lt;&lt;screenshotCapture</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>24/02/09 17:37:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@6b81ce95]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>24/02/09 17:37:18</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.screenshotCapture(org.testng.ITestResult)[pri:0, instance:com.crm.qa.testcases.LoginPageTest@6b81ce95]">&lt;&lt;screenshotCapture</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>24/02/09 17:37:18</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.crmLogoImageTest()[pri:2, instance:com.crm.qa.testcases.LoginPageTest@6b81ce95]">crmLogoImageTest</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/05/15 16:07:32</td>   <td>234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@661972b0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>23/05/15 16:06:57</td>   <td>-34536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@661972b0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
 </table>
